--- a/transformacje.html
+++ b/transformacje.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/transformacje.css">
+    <title>Efekty obrazu</title>
 </head>
 <body>
     
-
-
     <script>
 
     </script>
